# devsecops

./: .env.changeme.example  .env.public.example  .env.secret.example  .gitignore  .gitmodules  README.md  atproto.py  bluesky.py  chat.py  chat_ollama.py  compose.yaml  deadinternet.py  debug.py  docker_utils.sh  editme.example.py  env.example.py  env.py  env.py.example  flow.mmd  getKeystore.sh  keys  main.py  mapaud.py  pyproject.toml  renewcert.sh  run.py  search.py  start.sh  state.py  stopAll.sh  testAPI.py  tool_docker.py  tool_graph.py  tool_openbao.py  util.py  utils_docker.py  wtf.json  wtf.txt
AICouncil/: config.yaml  go.mod  main.go  main.py  matrix_integration.py  ollama.py
bluesky/: cloud-init.yaml  run_vm.sh  test.py  test_ws.py  tree.txt
bsky_bridge/: bluesky_get_posts.py  bsky_feed_example copy.json  bsky_feed_example.json  bsky_video_example.json  go.mod  go.sum  main.go  serve_feed.py  serve_vertical_fyp.py
certs/: .gitignore  genKeys.sh  genProdKeys.sh.template  init-temp-keys.sh  openssl.config.template  renewCert.py
diagrams/: architecture.dot  genDiagrams.sh
handle-resolution-service/: .gitignore  README.md  env.json  requirements.txt  samconfig.toml  template.yaml
keycloak/: .gitignore  docker-compose-keycloak-db.yaml  docker-compose-keycloak.yaml  exportRealms.sh  getauthtoken.txt  init-temp-keys.sh  keycloak-startup.sh  keycloak_admin.sh  run_keycloak.sh  run_keycloak_db.sh  start.sh
lambdas/: README.md  build.sh  template.yaml
legacy/: env.example.py  run.py  up.py  wait_for_db.sh
nginx-proxy/: init.sh  start.sh
org/: README.md  (+13 more)
(+161 files in other folders)
