[project]
name = "devsecops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docker>=7.1.0",
    "duckduckgo-search>=6.3.7",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.9",
    "langchain-ollama>=0.2.1",
    "langgraph>=0.2.56",
    "langsmith>=0.1.147",
    "python-gitlab>=5.1.0",
]
